# sys-dashboard

./: .gitignore  LICENSE  README.md  RUST_TAURI_CHEATSHEET.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: audit-and-release.yml
packaging/: README.md  sys-dashboard.desktop
src/: api.ts  forecast.ts  gauge.ts  main.ts  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/monitors/: cpu_ram.rs  gpu.rs  mod.rs
src-tauri/src/weather/: demo.rs  fmi.rs  mod.rs
